# gitinho

./: .env.example  .gitignore  Makefile  README.md  initial-prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/chat/: .env.example  .mcp-config.json.example  next.config.ts  package.json
apps/chat/docker/: Dockerfile  compose.dev.yml  compose.yml
apps/chat/scripts/: seed-gitinho-agents.ts
apps/chat/src/: instrumentation.ts
apps/chat/src/app/: layout.tsx
apps/chat/src/components/: message-parts.tsx  pre-block.tsx  prompt-input.tsx
apps/chat/src/types/: authentication.ts
apps/mcp/: README.md  pyproject.toml
apps/mcp/gitinho_mcp/: __init__.py  __main__.py  config.py  server.py
apps/mcp/gitinho_mcp/github/: app_auth.py  client.py  graphql.py
apps/mcp/gitinho_mcp/tools/: __init__.py  _context.py  activity.py  code_search.py  comments.py  commits.py  datapackages.py  discussions.py  documents.py  glossary.py  issues.py  pulls.py  repos.py  users.py
apps/mcp/scripts/: list_tools.py  smoke_documents.py  smoke_glossary.py  smoke_test.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  deps.py  logging_setup.py  main.py
backend/app/agent/: prompts.py  runner.py  tool_registry.py
backend/app/api/: auth_routes.py  chats.py  exports.py  health.py  messages.py  stream.py
backend/app/auth/: allowlist.py  oauth.py  session.py
backend/app/db/: base.py  models.py  session.py
backend/app/github/: app_auth.py  client.py  graphql.py
backend/app/mcp/: client.py
backend/app/tools/: __init__.py  _base.py  _context.py  activity.py  commits.py  discussions.py  exports.py  issues.py  pulls.py  repos.py  users.py
deploy/: docker-compose.yml  easy-panel.README.md
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY.md  MIGRATION_BETTER_CHATBOT.md  PLAN.md  SECURITY.md
docs/adr/: 0001-one-mcp-per-external-domain.md  0002-one-proxy-route-per-external-domain.md  0003-pyodide-runs-in-scoped-iframe.md  0004-marker-prefix-render-protocol.md  README.md
docs/spec/: 01-acceptance-cases.md  02-security-invariants.md  03-anti-patterns.md  README.md
frontend/: Dockerfile  index.html  nginx.conf.template  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ChatView.tsx  LoginScreen.tsx  Sidebar.tsx
legacy/: README.md
(+39 files in other folders)
