[project]
name = "gitinho-backend"
version = "0.1.0"
description = "Agente conversacional para a organização GitHub (read-only fase 1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pydantic-ai>=0.0.14,<0.1",
    "openai>=1.55,<2",
    "httpx>=0.28,<0.29",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2,<3",
    "authlib>=1.3,<2",
    "cryptography>=43,<44",
    "pyjwt[crypto]>=2.9,<3",
    "sse-starlette>=2.1,<3",
    "openpyxl>=3.1,<4",
    "pandas>=2.2,<3",
    "structlog>=24.4,<25",
    "slowapi>=0.1.9,<0.2",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<0.22",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
