[project]
name = "gitinho-mcp"
version = "0.1.0"
description = "MCP server expondo ferramentas read-only para a organização splor-mg no GitHub."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "splor-mg" }]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.9",
    "openpyxl>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24",
    "python-dotenv>=1.0",
    "markitdown[all]>=0.1.1",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
gitinho-mcp = "gitinho_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitinho_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
